# axeptio-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml
.github/workflows/: check.yml
src/: lib.rs
